--- a/src/components/side-bar/side-bar.scss
+++ b/src/components/side-bar/side-bar.scss
@@ -14,7 +14,7 @@
     margin: 0 auto;
 
     &-li {
-      color: #FFFFFF;
+      // color: #FFFFFF;
       list-style-type: none;
       width: 224px;
       height: 60px;
@@ -28,6 +28,8 @@
         justify-content: flex-start;
         align-items: center;
         font-size: 18px;
+        text-decoration: none;
+        color: #FFFFFF;
 
       }
 
@@ -42,7 +44,10 @@
 
       &--active {
         background: #FFFFFF;
-        color: #000000;
+
+        a {
+          color: #000000;
+        }
 
         svg {
           fill: #6347F5;
