--- a/src/components/filter/filter.scss
+++ b/src/components/filter/filter.scss
@@ -24,6 +24,7 @@ justify-content: space-between;
       list-style: none;
       font-size: 14px;
       letter-spacing: 0.02em;
+      cursor: pointer;
 
       &:hover {
         box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.07);
