fix style in the token item

--- a/src/components/item-list/item-list.scss
+++ b/src/components/item-list/item-list.scss
@@ -1,13 +1,12 @@
 .item-list {
-  // width: 84%;
   min-height: 92px;
   box-sizing: border-box;
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
-  // padding-left: 20px;
   padding: 24px 0 24px 20px;
+  padding-right: 5px;
   background: #FFFFFF;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.04);
   border-radius: 16px;
@@ -25,50 +24,57 @@
   &__number {
     color: #93949D;
     font-size: 18px;
-    margin-right: 23px;
-
   }
 
   &__img {
     width: 40px;
     height: 40px;
     border: 1px dashed red;
-    margin-right: 18px;
   }
 
   &__title {
     font-size: 17px;
-    margin-right: 32px;
+    margin-right: 22px;
+    min-width: 130px;
 
     span {
       color: #6347F5;
       font-size: 16px;
       display: block;
-
     }
   }
 
   &__price {
     color: #6347F5;
-    margin-right: 32px;
+    min-width: 140px;
 
     &-block {
       font-size: 12px;
       color: #30BF8C;
 
+      &--negative {
+        color: #FF647C;
+      }
+
+      &--positive {
+        color: #30BF8C;
+      }
+
+      &--zero {
+        color: #93949D;
+      }
+
       span {
         position: relative;
-        // display: block;
         margin-right: 17px;
 
         &:nth-child(2) {
-          color: red;
 
           &::after, &::before {
             content: "";
             position: absolute;
-            width: 5px;
-            height: 5px;
+            width: 3px;
+            height: 3px;
             background-color: #93949D;
             border-radius: 50%;
             top: 5px;
@@ -88,29 +94,30 @@
   }
 
   &__volume, &__tvl {
-    margin-right: 31px;
+    margin-right: 11px;
+    min-width: 140px;
 
     span {
       color: #6347F5;
       font-size: 13px;
-
     }
   }
 
-  &__amount {
+  &__volume, &__tvl, &__amount {
     display: flex;
     justify-content: space-around;
-    margin-right: 35px;
+  }
+
+  &__amount {
+    min-width: 70px;
 
     img {
-      margin-right: 20px;
+      margin-right: 5px;
     }
-
   }
 
   &__price, &__volume, &__tvl, &__amount {
     font-size: 16px;
-
   }
 
   &__btn {
